--- a/webapp/src/app/main/main.html
+++ b/webapp/src/app/main/main.html
@@ -1,20 +1,37 @@
-<div class="container">
+<div
+    class="container"
+    ng-controller="mainController">
 
     <div class="row form-group search-input">
+
         <div class="col-xs-9">
-            <div class="input-group" ng-if="!main.searchByYear">
+            <div
+                class="input-group"
+                ng-if="!main.searchByYear">
+
                 <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">
-                        <i class="glyphicon glyphicon-search" ng-click="main.getListData()"></i>
+                    <button class="btn btn-default" type="button" ng-click="main.getListData()">
+                        <i class="glyphicon glyphicon-search"></i>
                     </button>
                 </span>
-                <input class="form-control" type="text" placeholder="e.g. 'Yelp', 'Avicii', or 'Gravity'"
-                       ng-model="main.searchInput">
+
+                <input
+                    class="form-control"
+                    type="text"
+                    placeholder="e.g. 'Yelp', 'Avicii', or 'Gravity'"
+                    ng-model="main.searchInput">
+
             </div>
+
             <div ng-if="main.searchByYear">
                 <div class="form-inline">
                     <div class="pull-right">
-                        <button class="btn btn-default" type="button" ng-click="main.toggleInRange()" ng-bind="main.searchInRange ? 'by year' : 'in range'"></button>
+                        <button
+                            class="btn btn-default"
+                            type="button"
+                            ng-click="main.toggleInRange()"
+                            ng-bind="main.searchInRange ? 'by year' : 'in range'">
+                        </button>
                     </div>
 
                     <div class="pull-right year" ng-if="!main.searchInRange">
@@ -26,6 +43,7 @@
                         <label class="control-label">To:</label>
                         <input class="form-control" type="text" ng-model="main.range2">
                     </div>
+
                     <div class="pull-right range1" ng-if="main.searchInRange">
                         <label class="control-label">From:</label>
                         <input class="form-control" type="text" ng-model="main.range1">
@@ -40,17 +58,25 @@
                 </div>
             </div>
         </div>
+
         <div class="col-xs-1">
-            <button type="button" class="btn btn-default" ng-click="main.toggleSearch()" ng-bind="main.searchByYear ? 'by name' : 'by year'"></button>
+            <button
+                type="button"
+                class="btn btn-default"
+                ng-click="main.toggleSearch()"
+                ng-bind="main.searchByYear ? 'by name' : 'by year'">
+            </button>
         </div>
+
         <div class="col-xs-2">
-            <input bs-switch
-                   ng-model="main.searchType"
-                   type="checkbox"
-                   switch-on-text="Films"
-                   switch-off-text="Actors"
-                   switch-on-color="primary"
-                   switch-off-color="success">
+            <input
+                bs-switch
+                ng-model="main.searchType"
+                type="checkbox"
+                switch-on-text="Films"
+                switch-off-text="Actors"
+                switch-on-color="primary"
+                switch-off-color="success">
         </div>
 
     </div>
@@ -66,5 +92,4 @@
     <div ng-if="!main.searchType && main.actors">
         <actors actor="main.actors"></actors>
     </div>
-
 </div>
