first version home page with search films

--- a/webapp/src/app/actors/actors.html
+++ b/webapp/src/app/actors/actors.html
@@ -10,7 +10,7 @@
                 <button class="btn btn-default graph" ng-click="open()">Films chart</button>
                 <div class="row form-group">
                     <div class="col-xs-2">
-                        <img ng-src="{{(actor.photo === 'null') ? 'http://www.expogr.com/uploads/no_image.jpg' : actor.photo}}"
+                        <img ng-src="{{(actor.photo === 'null') ? 'https://www.met34.com/wp-content/themes/onb002/elements/ibe/img/no-room.jpg' : actor.photo}}"
                              class="img-responsive img-thumbnail actor-photo">
                     </div>
                     <div class="col-xs-10">
