--- a/webapp/src/app/films/films.html
+++ b/webapp/src/app/films/films.html
@@ -1,149 +1,31 @@
-<div class="panel-group" ng-show="film">
+<a href="#{{index}}" data-toggle="modal" class="panel panel-default">
 
-    <div class="panel panel-default">
+    <div class="panel-body">
 
-        <!--<div class="panel-heading">-->
-            <!--<button-->
-                <!--role="button"-->
-                <!--ng-click="film.isCollapsed = !film.isCollapsed"-->
-                <!--ng-bind="film.title">-->
-            <!--</button>-->
-        <!--</div>-->
+        <div class="form-group">
+            <img
+                ng-src="{{ (film.poster === null) ? '../../assets/img/no-room.jpg' : film.poster }}"
+                class="img-responsive img-thumbnail">
+        </div>
 
-        <div collapse="film.isCollapsed" class="panel-collapse collapse in">
+        <div
+            class="form-group m-b-xs"
+            ng-show="film.title.length">
 
-            <div class="panel-body">
+            <label class="m-b">Title:</label>
+            <span>{{ film.title }}</span>
 
-                <img
-                    ng-src="{{ (film.poster === 'null') ? 'http://www.expogr.com/uploads/no_image.jpg' : film.poster }}"
-                    class="img-responsive img-thumbnail film-image">
+        </div>
 
-                <!--<div class="form-group">-->
-                    <!--<label>Id:</label>-->
-                    <!--<span>{{ film.id }}</span>-->
-                <!--</div>-->
+        <div class="form-group m-b-xs">
 
-                <div class="form-group">
-                    <label>IMDB rating:</label>
-                    <span>{{ film.imdbRating }}</span>
-                </div>
-
-                <div class="form-group">
-                    <label>IMDB votes:</label>
-                    <span>{{ film.imdbVotes }}</span>
-                </div>
-
-                <div class="form-group">
-                    <label>Language:</label>
-                    <span>{{ film.language }}</span>
-                </div>
-
-                <div class="form-group">
-                    <label>Plot:</label>
-                    <span>{{ film.plot }}</span>
-                </div>
-
-                <div
-                    class="form-group"
-                    ng-show="film.actors">
-
-                    <label>Actors:</label>
-                    <span ng-repeat="actor in film.actors track by $index">
-                        {{actor}}{{$last ? '' : ', '}}
-                    </span>
-
-                </div>
-
-                <div
-                    class="form-group"
-                    ng-show="film.awards">
-
-                    <label>Awards:</label>
-                    <span ng-repeat="award in film.awards track by $index">
-                        {{award}}{{$last ? '' : ', '}}
-                    </span>
-
-                </div>
-
-                <div class="form-group"
-                     ng-if="film.country">
-                    <label>Country:</label>
-                    <span>{{film.country}}</span>
-                </div>
-
-                <div
-                    class="form-group"
-                    ng-show="film.director">
-
-                    <label>Director:</label>
-                    <span ng-repeat="director in film.director track by $index">
-                    {{  director}}{{$last ? '' : ', '}}
-                    </span>
-
-                </div>
-
-                <div
-                    class="form-group"
-                    ng-show="film.genres">
-
-                    <label>Genres:</label>
-                    <span ng-repeat="genre in film.genres track by $index">
-                        {{genre}} {{$last ? '' : ', '}}
-                    </span>
-                </div>
-
-                <!--<div class="form-group">-->
-                    <!--<label>Rated:</label>-->
-
-                    <!--<span>-->
-                        <!--<input-->
-                            <!--type="checkbox"-->
-                            <!--ng-model="film.rated"-->
-                            <!--onclick="return false">-->
-                    <!--</span>-->
-
-                <!--</div>-->
-
-                <div
-                    class="form-group"
-                    ng-show="film.runtime">
-
-                    <label>Released:</label>
-                    <span>{{ film.released }}</span>
-
-                </div>
-
-                <div
-                    class="form-group"
-                    ng-show="film.runtime">
-
-                    <label>Run-time:</label>
-                    <span>{{ film.runtime }}</span>
-
-                </div>
-
-                <div
-                    class="form-group"
-                    ng-show="film.type">
-
-                    <label>Type:</label>
-                    <span>{{ film.type }}</span>
-
-                </div>
-
-                <div
-                    class="form-group"
-                    ng-show="film.year">
-
-                    <label>Year:</label>
-                    <span>{{ film.year }}</span>
-
-                </div>
-
-            </div>
+            <label class="m-b">Year:</label>
+            <span>{{ film.year }}</span>
 
         </div>
 
     </div>
 
-</div>
+    <div class="more"> <span>More</span></div>
+
+</a>
