--- a/webapp/src/app/header/header.html
+++ b/webapp/src/app/header/header.html
@@ -1,4 +1,20 @@
-<a href="" class="logo">
-    <img src="img/logo.png" alt="Search Film Service">
-</a>
+<div class="container-fluid">
 
+    <div class="row">
+
+        <div class="col-xs-6 p-r">
+            <a href="" class="logo">
+                <img src="../../assets/img/logo.png" alt="Search Film Service">
+            </a>
+        </div>
+
+        <div class="col-xs-6 clearfix p-l">
+            <div class="pull-right">
+                <button class="btn">Sign in</button>
+                <button class="btn btn-default">Sign up</button>
+            </div>
+        </div>
+
+    </div>
+
+</div>
