--- a/webapp/src/app/search/search.html
+++ b/webapp/src/app/search/search.html
@@ -3,91 +3,118 @@
     ng-controller="searchController">
 
     <div class="text-center">
-        <p>Lorem ipsum</p>
-        <p>is simply dummy text of the printing and typesetting industry</p>
+        <h2>Lorem ipsum</h2>
+        <h2>is simply dummy text of the printing and typesetting industry</h2>
     </div>
 
-        <form
-            ng-class="{ 'open': isOpen }"
-            ng-hide="search.searchByYear"
-            ng-submit="search.getListData()">
+    <form
+        name="search.testForm"
+        ng-class="{ 'open': search.isOpen }"
+        ng-submit="search.getListData()">
 
-            <div class="input-group">
-                <input
-                    class="form-control"
-                    type="text"
-                    ng-model="search.searchInput"
-                    ng-click="isOpen = true">
+        <div class="input-group">
+            <input
+                name="name"
+                class="form-control"
+                type="text"
+                ng-model="search.searchInput"
+                required
+                ng-click="search.isOpen = true">
 
-                <span class="input-group-btn">
-                    <button
-                        type="submit"
-                        class="btn btn-link"
+            <span class="input-group-btn">
+                <button
+                    type="submit"
+                    class="btn btn-link"
+                    style="background: url('../../assets/img/magnifying-glass.svg')">
+                </button>
+            </span>
+        </div>
 
-                        style="background: url('../../assets/img/magnifying-glass.svg')">
-                    </button>
-                </span>
-            </div>
-        </form>
-
-        <!--<div ng-show="search.searchByYear">-->
-            <!--<div class="form-inline">-->
-                <!--<button-->
-                    <!--class="btn btn-default"-->
-                    <!--type="button"-->
-                    <!--ng-click="search.toggleInRange()"-->
-                    <!--ng-bind="search.searchInRange ? 'by year' : 'in range'">-->
-                <!--</button>-->
-
-                <!--<div class="year" ng-hide="search.searchInRange">-->
-                    <!--<label class="control-label">Year:</label>-->
-                    <!--<input class="form-control" type="text" ng-model="search.year">-->
-                <!--</div>-->
-
-                <!--<div class="range2" ng-show="search.searchInRange">-->
-                    <!--<label class="control-label">To:</label>-->
-                    <!--<input class="form-control" type="text" ng-model="search.range2">-->
-                <!--</div>-->
-
-                <!--<div class="range1" ng-show="search.searchInRange">-->
-                    <!--<label class="control-label">From:</label>-->
-                    <!--<input class="form-control" type="text" ng-model="search.range1">-->
-                <!--</div>-->
-
-                <!--<div class="search-button">-->
-                    <!--<button class="btn btn-default" type="button" ng-click="search.getListDataByYear()">-->
-                        <!--<i class="glyphicon glyphicon-search"></i>-->
-                        <!--Search-->
-                    <!--</button>-->
-                <!--</div>-->
-            <!--</div>-->
+        <!--<div ng-messages="search.testForm.name.$error">-->
+                <!--<span ng-message="required" class="error text-danger" role="alert">-->
+                    <!--You did not enter a field-->
+                <!--</span>-->
         <!--</div>-->
 
+    </form>
+
+    <pre>{{search.selectedSearchByYear}}</pre>
+
+    <form>
+
+        <div ng-hide="search.selectedSearchBy">
+            <div class="form-inline">
 
 
-    <!--<div class="col-xs-1">-->
-        <!--<button-->
-            <!--type="button"-->
-            <!--class="btn btn-default"-->
-            <!--ng-click="search.toggleSearch()"-->
-            <!--ng-bind="search.searchByYear ? 'by name' : 'by year'">-->
-        <!--</button>-->
-    <!--</div>-->
 
-    <!--<div class="col-xs-2">-->
-        <!--<input-->
-            <!--bs-switch-->
-            <!--ng-model="search.searchType"-->
-            <!--type="checkbox"-->
-            <!--switch-on-text="Films"-->
-            <!--switch-off-text="Actors"-->
-            <!--switch-on-color="primary"-->
-            <!--switch-off-color="success">-->
-    <!--</div>-->
+                <div class="year" ng-show="search.selectedSearchByYear">
+                    <label class="control-label">Year:</label>
+                    <input
+                        class="form-control"
+                        type="text"
+                        ng-model="search.year">
+                </div>
+
+                <div class="range2" ng-hide="search.selectedSearchByYear">
+                    <label class="control-label">To:</label>
+                    <input
+                        class="form-control"
+                        type="text"
+                        ng-model="search.range2">
+                </div>
+
+                <div class="range1" ng-hide="search.selectedSearchByYear">
+                    <label class="control-label">From:</label>
+                    <input
+                        class="form-control"
+                        type="text"
+                        ng-model="search.range1">
+                </div>
+
+                <div class="search-button">
+                    <button class="btn btn-default" type="button" ng-click="search.getListDataByYear()">
+                        <i class="glyphicon glyphicon-search"></i>
+                        Search
+                    </button>
+                </div>
+            </div>
+        </div>
+    </form>
+
 
     <!--<div ng-repeat="item in search.gerneName track by $index">-->
         <!--<button>{{item.name}}</button>-->
     <!--</div>-->
+
+</div>
+
+<div class="row">
+
+    <select
+        class="form-control"
+        ng-change="search.resetForm()"
+        ng-model="search.selectedSearchType"
+        ng-options="item.value as item.name for item in search.searchType">
+    </select>
+
+    <select
+        ng-show="search.selectedSearchType"
+        class="form-control"
+        ng-change="search.toggleSearch()"
+        ng-model="search.selectedSearchBy"
+        ng-options="item.value as item.name for item in search.searchBy">
+    </select>
+
+    <select
+        ng-show=""
+        class="form-control"
+        ng-change="search.toggleInRange()"
+        ng-model="search.selectedSearchByYear"
+        ng-options="item.value as item.name for item in search.searchByYear">
+    </select>
+
+
+    <button ng-click="search.resetForm()" class="btn">Reset</button>
 
 </div>
 
@@ -97,32 +124,37 @@
 
         <div
             class="col-sm-6 col-md-4 col-lg-3 panel-group"
-            ng-repeat="item in search.films track by $index"
-            ng-if="search.searchType && search.films && !search.year && !search.range1">
+            ng-repeat="film in search.films track by $index"
+            ng-if="search.selectedSearchType && search.films && !search.year && !search.range1">
 
             <films
-                film="item"
-                index="item.id">
+                film="film"
+                index="film.id">
             </films>
 
             <modal
                 handler="index"
-                film="item"
-                index="item.id">
+                film="film"
+                index="film.id">
             </modal>
 
         </div>
 
         <div
-            ng-repeat="item in search.films track by $index"
+            class="col-sm-6 col-md-4 col-lg-3 panel-group"
+            ng-repeat="film in search.films track by $index"
             ng-if="search.films && (search.year || search.range1)">
 
-            <films film="item"></films>
+            <films film="film"></films>
 
         </div>
 
-        <div ng-if="!search.searchType && search.actors">
-            <actors actor="search.actors"></actors>
+        <div
+            ng-repeat="actor in search.actors track by $index"
+            ng-if="!search.selectedSearchType && search.actors">
+
+            <actors actor="actor"></actors>
+
         </div>
 
     </div>
