--- a/webapp/src/assets/css/modules/_search.scss
+++ b/webapp/src/assets/css/modules/_search.scss
@@ -34,11 +34,11 @@
   .text-center {
     padding-top: 40px;
 
-    p:nth-of-type(1) {
+    h2:nth-of-type(1) {
       font-size: 52px;
     }
 
-    p:nth-of-type(2) {
+    h2:nth-of-type(2) {
       font-size: 28px;
       font-weight: 100;
     }
