--- a/webapp/src/app/actors/actors.html
+++ b/webapp/src/app/actors/actors.html
@@ -1,49 +1,49 @@
-<div class="panel-group">
+<div class="panel panel-default">
 
-    <div class="panel panel-default">
+    <div class="panel-body">
 
-        {{actor}}
+        <button class="btn btn-default graph" ng-click="open()">Films chart</button>
 
-            <div class="panel-body panel-actor">
+        <div class="row">
 
-                <button class="btn btn-default graph" ng-click="open()">Films chart</button>
+            <div class="col-xs-2">
+                <img ng-src="{{ (actor.photo === null) ? '../../assets/img/no-room.jpg' : actor.photo}}"
+                     class="img-responsive img-thumbnail actor-photo">
+            </div>
 
-                <div class="row form-group">
+            <div class="col-xs-10">
 
-                    <div class="col-xs-2">
-                        <img ng-src="{{ (actor.photo === 'null') ? 'https://www.met34.com/wp-content/themes/onb002/elements/ibe/img/no-room.jpg' : actor.photo}}"
-                             class="img-responsive img-thumbnail actor-photo">
-                    </div>
-
-                    <div class="col-xs-10">
-
-                        <div class="form-group">
-                            <label>Name:</label>
-                            <span ng-bind="actor.name"></span>
-                        </div>
-
-                        <div class="form-group">
-                            <label>Occupation:</label>
-                            <span ng-repeat="occupation in actor.occupation track by $index">
-                                {{occupation}}{{$last ? '' : ', '}}
-                            </span>
-                        </div>
-
-                        <div class="form-group">
-                            <label>Biography:</label>
-                            <span ng-bind="actor.bio"></span>
-                        </div>
-
-                    </div>
-
+                <div class="form-group">
+                    <label>Name:</label>
+                    <span ng-bind="actor.name"></span>
                 </div>
 
-                <div ng-repeat="item in actor.filmList track by $index">
-                    <films film="item"></films>
+                <div class="form-group">
+                    <label>Occupation:</label>
+                    <span ng-repeat="occupation in actor.occupation track by $index">
+                        {{occupation}}{{$last ? '' : ', '}}
+                    </span>
+                </div>
+
+                <div class="form-group">
+                    <label>Biography:</label>
+                    <span ng-bind="actor.bio"></span>
                 </div>
 
             </div>
 
         </div>
+
+        <div class="row">
+            <div
+                class="col-sm-6 col-md-4 col-lg-3 panel-films"
+                ng-repeat="item in actor.filmList track by $index">
+
+                <films film="item" index="film.id"></films>
+
+            </div>
+        </div>
+
+    </div>
 
 </div>
