--- a/webapp/src/assets/css/main.scss
+++ b/webapp/src/assets/css/main.scss
@@ -4,59 +4,7 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  font-weight: 300;
-}
 
-.search-input {
-  margin-top: 20px;
-}
-
-.film-image {
-  max-height: 200px;
-}
-
-.graph {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  z-index: 10;
-}
-
-.panel-actor {
-  position: relative;
-}
-
-.range1 {
-  margin: 0 30px;
-}
-
-.range2 {
-  margin-right: 30px;
-}
-
-.year {
-  margin: 0 30px;
-}
-
-.panel {
-  background: #f5f5f5;
-  max-width: 440px;
-  margin: 0 auto;
-}
-
-a {
-  color: #000;
-  position: relative;
-  display: block;
-  
-  &:hover {
-    color: #000;
-    text-decoration: none;
-
-    & > .more {
-      opacity: 1;
-    }
-  }
 }
 
 button {
@@ -64,23 +12,13 @@ button {
   background: transparent;
 }
 
-.more {
-  opacity: 0;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  color: #fff;
-  background: rgba(0,0,0,.7);
-  transition: opacity .2s;
-  border-radius: 4px;
-
-  span {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    text-align: center;
-    display: block;
-  }
+a:focus,
+button:focus,
+input:focus,
+select:focus,
+.form-control:focus,
+textarea:focus {
+  outline: none;
+  box-shadow: none;
+  border-color: #ccc;
 }
