add filters search

--- a/webapp/src/app/modal/modal.html
+++ b/webapp/src/app/modal/modal.html
@@ -26,7 +26,7 @@
                 </div>
 
                 <div
-                    class="form-group m-b-xs"
+                    class="form-group m-b-md"
                     ng-show="film.title.length">
 
                     <label class="m-b">Title:</label>
@@ -34,7 +34,7 @@
 
                 </div>
 
-                <div class="form-group m-b-xs">
+                <div class="form-group m-b-md">
 
                     <label class="m-b">Year:</label>
                     <span>{{ film.year }}</span>
@@ -42,7 +42,7 @@
                 </div>
 
                 <div
-                    class="form-group m-b-xs"
+                    class="form-group m-b-md"
                     ng-show="film.imdbRating">
 
                     <label class="m-b">Rating:</label>
@@ -50,7 +50,7 @@
                 </div>
 
                 <div
-                    class="form-group m-b-xs"
+                    class="form-group m-b-md"
                     ng-show="film.imdbVotes">
 
                     <label class="m-b">IMDB votes:</label>
@@ -59,7 +59,7 @@
                 </div>
 
                 <div
-                    class="form-group m-b-xs"
+                    class="form-group m-b-md"
                     ng-show="film.language.length">
 
                     <label class="m-b">Language:</label>
@@ -68,7 +68,7 @@
                 </div>
 
                 <div
-                    class="form-group m-b-xs"
+                    class="form-group m-b-md"
                     ng-show="film.actors.length">
 
                     <label class="m-b">Actors:</label>
@@ -79,7 +79,7 @@
                 </div>
 
                 <div
-                    class="form-group m-b-xs"
+                    class="form-group m-b-md"
                     ng-show="film.awards.length">
 
                     <label class="m-b">Awards:</label>
@@ -90,7 +90,7 @@
                 </div>
 
                 <div
-                    class="form-group m-b-xs"
+                    class="form-group m-b-md"
                     ng-if="film.country.length">
 
                     <label class="m-b">Country:</label>
@@ -99,7 +99,7 @@
                 </div>
 
                 <div
-                    class="form-group m-b-xs"
+                    class="form-group m-b-md"
                     ng-show="film.director.length">
 
                     <label class="m-b">Director:</label>
@@ -110,7 +110,7 @@
                 </div>
 
                 <div
-                    class="form-group m-b-xs"
+                    class="form-group m-b-md"
                     ng-show="film.genres.length">
 
                     <label class="m-b">Genres:</label>
@@ -121,7 +121,7 @@
                 </div>
 
                 <div
-                    class="form-group m-b-xs"
+                    class="form-group m-b-md"
                     ng-show="film.released.length">
 
                     <label class="m-b">Released:</label>
@@ -130,7 +130,7 @@
                 </div>
 
                 <div
-                    class="form-group m-b-xs"
+                    class="form-group m-b-md"
                     ng-show="film.runtime.length">
 
                     <label class="m-b">Run-time:</label>
@@ -139,7 +139,7 @@
                 </div>
 
                 <div
-                    class="form-group m-b-xs"
+                    class="form-group m-b-md"
                     ng-show="film.type.length">
 
                     <label class="m-b">Type:</label>
@@ -148,7 +148,7 @@
                 </div>
 
                 <div
-                    class="form-group m-b-xs"
+                    class="form-group m-b-md"
                     ng-show="film.year.length">
 
                     <label class="m-b">Year:</label>
@@ -157,7 +157,7 @@
                 </div>
 
                 <div
-                    class="form-group m-b-xs"
+                    class="form-group m-b-md"
                     ng-show="film.plot.length">
 
                     <label class="m-b">Plot:</label>
