--- a/webapp/src/app/films/films.html
+++ b/webapp/src/app/films/films.html
@@ -1,4 +1,4 @@
-<a href="#{{index}}" data-toggle="modal" class="panel panel-default">
+<a href="#{{index}}" data-toggle="modal" class="panel panel-default panel-tile">
 
     <div class="panel-body">
 
@@ -9,23 +9,17 @@
         </div>
 
         <div
-            class="form-group m-b-xs"
+            class="form-group m-b-xs title"
             ng-show="film.title.length">
 
-            <label class="m-b">Title:</label>
             <span>{{ film.title }}</span>
-
-        </div>
-
-        <div class="form-group m-b-xs">
-
-            <label class="m-b">Year:</label>
-            <span>{{ film.year }}</span>
 
         </div>
 
     </div>
 
-    <div class="more"> <span>More</span></div>
+    <div class="more">
+        <button>View more</button>
+    </div>
 
 </a>
