--- a/webapp/src/assets/css/modules/_films.scss
+++ b/webapp/src/assets/css/modules/_films.scss
@@ -3,6 +3,10 @@
     background: #f5f5f5;
     max-width: 440px;
     margin: 0 auto;
+
+    @media(min-width: 768px) {
+      max-width: 100%;
+    }
   }
 
   .more {
