--- a/webapp/src/assets/css/modules/_search.scss
+++ b/webapp/src/assets/css/modules/_search.scss
@@ -9,8 +9,12 @@
     height: 400px;
   }
 
+  .input-group-btn {
+    height: 100%;
+  }
+
   .input-group {
-    border-bottom: 4px solid #ddd;
+    border-bottom: 2px solid #ddd;
     background: transparent;
     max-width: 768px;
     width: 100%;
@@ -28,6 +32,7 @@
 
     button {
       height: 100%;
+      background: url(../../assets/img/magnifying-glass.svg) no-repeat center;
     }
   }
 
