to fixed modal popup

--- a/webapp/src/app/modal/modal.html
+++ b/webapp/src/app/modal/modal.html
@@ -21,7 +21,7 @@
 
                 <div class="form-group">
                     <img
-                        ng-src="{{ (film.poster === 'null') ? '../../assets/img/no-room.jpg' : film.poster }}"
+                        ng-src="{{ (film.poster === null) ? '../../assets/img/no-room.jpg' : film.poster }}"
                         class="img-responsive img-thumbnail">
                 </div>
 
@@ -170,4 +170,5 @@
         </div>
 
     </div>
+
 </div>
