--- a/webapp/src/app/search/search.html
+++ b/webapp/src/app/search/search.html
@@ -15,6 +15,7 @@
         ng-submit="search.getListData()">
 
         <div class="input-group">
+
             <input
                 placeholder="Search"
                 name="name"
@@ -30,6 +31,7 @@
                     class="btn btn-link">
                 </button>
             </span>
+
         </div>
 
         <!--<div ng-messages="search.searchForm.name.$error">-->
@@ -61,10 +63,12 @@
             ng-hide="search.selectedSearchByYear">
 
             <label class="control-label">To:</label>
+
             <input
                 class="form-control"
                 type="text"
                 ng-model="search.range2">
+
         </div>
 
         <div
@@ -72,10 +76,12 @@
             ng-hide="search.selectedSearchByYear">
 
             <label class="control-label">From:</label>
+
             <input
                 class="form-control"
                 type="text"
                 ng-model="search.range1">
+
         </div>
 
         <span class="input-group-btn">
@@ -135,6 +141,7 @@
         </div>
 
     </div>
+
 </div>
 
 <div
@@ -165,43 +172,59 @@
             ng-repeat="film in search.films track by $index"
             ng-if="search.films && (search.year || search.range1)">
 
-            <films film="film"></films>
+            <films
+                film="film"
+                index="film.id"
+                ng-click="search.filmData(film)">
+            </films>
 
         </div>
 
         <div
-            class="col-xs panel-group panel-actors"
+            class="col-xs-12 panel-group panel-actors"
             ng-repeat="actor in search.actors track by $index"
-            ng-if="!search.selectedSearchType && search.actors">
+            ng-show="!search.selectedSearchType && search.actors">
 
-            <actors actor="actor"></actors>
+            <actors
+                actor="actor"
+                film-data="search.filmData()">
+            </actors>
 
         </div>
 
     </div>
-</div>
 
+</div>
 
 <div
     class="container p-t-md films"
     ng-hide="search.films.length || search.actors.length">
 
     <div class="row">
-        <h5 class="col-sm-4 m-b-md">Most popular fimls:</h5>
+
+        <h5 class="col-xs-6 m-b-md">Most popular fimls:</h5>
+
+        <div class="swiper-wrapper-btn col-xs-6 pull-right">
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+
     </div>
 
     <div class="row">
-
-        <div class="swiper-container">
+<button  ng-click="search.sliderStopAutoplay()">sfsdfg</button>
+        <div class="swiper-container col-xs-12">
 
             <div class="swiper-wrapper">
+
                 <div
                     class="swiper-slide panel-group panel-films"
-                    ng-repeat="film in search.popularFilms">
+                    ng-repeat="film in search.popularFilms track by $index">
 
                     <films
                         film="film"
-                        index="film.id">
+                        index="film.id"
+                        ng-click="search.filmData(film)">
                     </films>
 
                 </div>
@@ -209,9 +232,6 @@
             </div>
 
         </div>
-
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
 
     </div>
 
