--- a/webapp/src/assets/css/modules/_actors.scss
+++ b/webapp/src/assets/css/modules/_actors.scss
@@ -2,10 +2,10 @@
   position: relative;
 
 
-  .graph {
-    position: absolute;
-    right: 15px;
-    top: 15px;
-    z-index: 10;
-  }
+  //.graph {
+  //  position: absolute;
+  //  right: 15px;
+  //  top: 15px;
+  //  z-index: 10;
+  //}
 }
