fixed modal popup

--- a/webapp/src/app/films/films.html
+++ b/webapp/src/app/films/films.html
@@ -1,5 +1,5 @@
-<a
-    href="#{{index}}"
+<div
+    ng-click="openModal()"
     data-toggle="modal"
     class="panel panel-default panel-tile">
 
@@ -25,4 +25,4 @@
         <button>View more</button>
     </div>
 
-</a>
+</div>
