--- a/webapp/src/app/footer/footer.html
+++ b/webapp/src/app/footer/footer.html
@@ -2,9 +2,12 @@
 
     <div class="row">
 
-        <div class="col-xs-6 pull-right">
-            <a href="https://github.com/staspast">andriyspas</a>
+        <div class="pull-right p-r-md">
+
+            <a href="https://github.com/staspast">@staspast</a>
+            <br>
             <a href="https://github.com/andriyspas">@andriyspas</a>
+
         </div>
 
     </div>
