--- a/webapp/src/assets/css/modules/_search.scss
+++ b/webapp/src/assets/css/modules/_search.scss
@@ -34,6 +34,11 @@
       height: 100%;
       background: url('../../assets/img/magnifying-glass.svg') no-repeat center;
     }
+
+    .search-range input {
+      width: 45%;
+      float: left;
+    }
   }
 
   .text-center {
@@ -56,31 +61,19 @@
       }
     }
   }
-}
 
-form {
-  //position: absolute;
-  bottom: 40px;
-  right: 15px;
-  left: 15px;
-  transform: scale3d(0.5,0.5,1);
-  transition: all 0.5s;
-  transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
+  &-form {
+    position: absolute;
+    bottom: 40px;
+    right: 15px;
+    left: 15px;
+    transform: scale3d(0.5,0.5,1);
+    transition: all 0.5s;
+    transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
 
-  &.open {
-    transform: translate3d(0, -50%, 0);
-    margin: auto;
-  }
-}
-
-.swiper-wrapper-btn {
-  width: 70px;
-  top: 12px;
-  right: 5px;
-
-  .swiper-button-prev,
-  .swiper-button-next {
-    width: 12px;
-    background-size: contain;
+    &.open {
+      transform: translate3d(0, -50%, 0);
+      margin: auto;
+    }
   }
 }
